# Paral_Potapov_Artyom_24944

sem/: sem2.cpp  tst
task1/: CMakeLists.txt  README  task1.cpp
task2_1/: CMakeLists.txt  graph.py  task1.cpp
task2_2/: CMakeLists.txt  graph.py  task2.cpp
task2_3/: CMakeLists.txt  var1.cpp  var2.cpp
task3_1/: CMakeLists.txt  graph.py  task3_1.cpp
task3_2/: CMakeLists.txt  client_pow.txt  client_sin.txt  client_sqrt.txt  graph.py  task3-2.cpp  task3-2pool.cpp
task4/: task4.py
task5/: task5.py  try.py
task6/: task6multicore.cpp  task6onecore.cpp  Отчёт.docx
task7/: task7_tryx2.cpp  Отчёт.docx
